nats/k8s/nats-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nats
  labels:
    name: nats
    purpose: messaging-platform
